--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <h1>ポートフォリオサイト</h1>
-    <script src="main.js"></script>
+    <div class="top">
+      <h1>ポートフォリオサイト</h1>
+      <h2>My name</h2>
+      <div id="display-name" class="name">渡野綾大（りょうた）</div>
+      <h2>My hobby</h2>
+      <div id="display-hobby" class="hobby">野球観戦、スポーツ全般</div>
+      <h2>大学</h2>
+      <div id="display-school" class="school">同志社大学</div>
+      <script>
+        const displayName = document.getElementById("display-name");
+        const displayHobby = document.getElementById("display-hobby");
+        const displaySchool = document.getElementById("dsiplay-school");
+      </script>
   </body>
 </html>
